- Version 0.6.4:
  - Apple Pages compatibility and more options (thanks apsavin!).
  - Merge pull request #349 from isdh/patch-1.
  - More options for tables.
  - Extend encoding of text to also remove invalid XML characters.
  - Round cx and cy values for images in a:ext tag.
  - Packages updates.
  - DOCX: Feature request: ability to specify list level/depth.
  - Documentation: Fixed the addImage example for DOCX.
- Version 0.6.3:
  - DOCX: addText() now supporting newline.
  - DOCX: Add paragraph spacing option.
  - DOCX: Fix image relationships for header/footer.
  - DOCX: columns support.
  - DOCX: Better units support for image size: '1in', '1em', '1cm', '1mm', '1pt', '1pc'.
  - Fixed the jpeg support.
- Version 0.6.2:
  - PPTX workaround for using placeholders + custom sizes + custom fills: the disableFillSettings setting.
- Version 0.6.1:
  - PPTX paragraph: more auto-fit options and more dots options.
  - PPTX shapes more options: you can now change y,x,cx and cy for ph shapes, title, desc, hidden, nvPrAttrCode and nvPrCode.
  - Better units support in pptx shapes: '1in', '1em', '1cm', '1mm', '1pt', '1pc'.
  - An option to change the view of a pptx document.
  - Fix: borderStyle does not work because of a typo.
  - More fonts support.
  - Some packages updates.
- Version 0.6.0:
  - Option to change the pptx master slide layout (right now only one master slides supported).
  - Add 'indentFirstLine' attribute for paragraph, 'indent' attribute for tables (Merge pull request #302).
  - Add some docx features (Merge pull request #301).
  - Some packages updates.
- Version 0.5.2:
  - Added a missing configuration option to the layout controls support in PowerPoint slides.
- Version 0.5.1:
  - Allow using layout controls in PowerPoint slides using the ph option of addText.
- Version 0.5.0:
  - Microsoft Word Document new features:
	- addText now have 2 new options: superscript and subscript (fixed issue #299).
  - Microsoft PowerPoint Document new features: