@@ -695,13 +695,16 @@ function makePptx(genobj, new_type, options, gen_private, type_info) {
         out_obj.rpr_info += shapes.createColorElements(slide_obj.color)
       } // Endif.
 
+	  var pitchFamily = text_info.pitch_family || text_info.pitch_family === 0 ? text_info.pitch_family : 34
+	  var charset = text_info.charset || text_info.charset === 0 ? text_info.charset : 0
+
       if (text_info.font_face) {
         out_obj.rpr_info +=
           '<a:latin typeface="' +
           text_info.font_face +
-          '" pitchFamily="34" charset="0"/><a:cs typeface="' +
+          '" pitchFamily="' + pitchFamily + '" charset="' + charset + '"/><a:cs typeface="' +
           text_info.font_face +
-          '" pitchFamily="34" charset="0"/>'
+          '" pitchFamily="' + pitchFamily + '" charset="' + charset + '"/>'
       } // Endif.
     } else {
       if (slide_obj && slide_obj.color) {
