@@ -55,26 +55,26 @@
     "prettify:all": "prettier --write \"{lib,examples,tests,plugins,test_files}/**/*.{jsx,js}\""
   },
   "dependencies": {
-    "archiver": "~3.1.1",
+    "archiver": "~5.2.0",
     "async": "^3.2.0",
     "fast-image-size": "^0.1.3",
-    "jszip": "^3.2.2",
-    "lodash": "^4.17.15",
+    "jszip": "^3.6.0",
+    "lodash": "^4.17.21",
     "readable-stream": "~3.6.0",
     "setimmediate": "~1.0.5",
-    "xmlbuilder": "^15.1.0"
+    "xmlbuilder": "^15.1.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.9.0",
-    "@babel/node": "^7.8.7",
-    "@babel/preset-env": "^7.9.0",
-    "@babel/preset-flow": "^7.9.0",
+    "@babel/core": "^7.13.8",
+    "@babel/node": "^7.13.0",
+    "@babel/preset-env": "^7.13.9",
+    "@babel/preset-flow": "^7.12.13",
     "babel-core": "^7.0.0-bridge.0",
     "babel-eslint": "^10.1.0",
     "better-npm-run": "^0.1.1",
-    "chai": "^4.2.0",
-    "commitizen": "^4.0.3",
-    "cz-conventional-changelog": "^3.1.0",
+    "chai": "^4.3.3",
+    "commitizen": "^4.2.3",
+    "cz-conventional-changelog": "^3.3.0",
     "esdoc": "^1.1.0",
     "esdoc-brand-plugin": "^1.0.1",
     "esdoc-ecmascript-proposal-plugin": "^1.0.0",
@@ -83,32 +83,32 @@
     "esdoc-integrate-test-plugin": "^1.0.0",
     "esdoc-lint-plugin": "^1.0.2",
     "esdoc-standard-plugin": "^1.0.0",
-    "eslint": "^6.8.0",
+    "eslint": "^7.21.0",
     "eslint-config-mocha": "^0.0.0",
-    "eslint-config-prettier": "^6.10.1",
-    "eslint-config-standard": "^14.1.1",
-    "eslint-plugin-flowtype": "^4.7.0",
-    "eslint-plugin-import": "^2.20.1",
-    "eslint-plugin-mocha": "^6.3.0",
+    "eslint-config-prettier": "^8.1.0",
+    "eslint-config-standard": "^16.0.2",
+    "eslint-plugin-flowtype": "^5.3.1",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-mocha": "^8.1.0",
     "eslint-plugin-mocha-only": "^0.0.3",
-    "eslint-plugin-node": "^11.0.0",
-    "eslint-plugin-prettier": "^3.1.2",
-    "eslint-plugin-promise": "^4.2.1",
-    "eslint-plugin-standard": "^4.0.1",
-    "flow-bin": "^0.121.0",
-    "flow-typed": "^3.1.0",
-    "mocha": "^7.1.1",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-prettier": "^3.3.1",
+    "eslint-plugin-promise": "^4.3.1",
+    "eslint-plugin-standard": "^5.0.0",
+    "flow-bin": "^0.146.0",
+    "flow-typed": "^3.3.1",
+    "mocha": "^8.3.0",
     "npm-run-all": "^4.1.5",
-    "prettier": "2.0.2",
+    "prettier": "2.2.1",
     "rimraf": "^3.0.2",
-    "rollup": "^2.2.0",
+    "rollup": "^2.40.0",
     "rollup-plugin-babel": "^4.4.0",
     "rollup-plugin-commonjs": "^10.1.0",
     "rollup-plugin-cpy": "^2.0.1",
     "rollup-plugin-json": "^4.0.0",
     "rollup-plugin-node-resolve": "^5.2.0",
-    "rollup-plugin-terser": "^5.3.0",
-    "sinon": "^9.0.1"
+    "rollup-plugin-terser": "^7.0.2",
+    "sinon": "^9.2.4"
   },
   "config": {
     "commitizen": {
