@@ -1,4 +1,5 @@
 - Version 0.6.4:
+  - PPTX: Better fonts support in pptx: new options parameter for addText: pitch_family and charset.
   - Apple Pages compatibility and more options (thanks apsavin!).
   - Merge pull request #349 from isdh/patch-1.
   - More options for tables.
